qt6/gen_qlayoutitem.nim


proc fcQLayoutItem_new(): ptr cQLayoutItem {.importc: "QLayoutItem_new".}
proc fcQLayoutItem_new2(param1: pointer): ptr cQLayoutItem {.importc: "QLayoutItem_new2".}
proc fcQLayoutItem_new3(alignment: cint): ptr cQLayoutItem {.importc: "QLayoutItem_new3".}
proc fcQLayoutItem_sizeHint(self: pointer, ): pointer {.importc: "QLayoutItem_sizeHint".}
proc fcQLayoutItem_minimumSize(self: pointer, ): pointer {.importc: "QLayoutItem_minimumSize".}
proc fcQLayoutItem_maximumSize(self: pointer, ): pointer {.importc: "QLayoutItem_maximumSize".}
proc fcQLayoutItem_expandingDirections(self: pointer, ): cint {.importc: "QLayoutItem_expandingDirections".}
proc fcQLayoutItem_setGeometry(self: pointer, geometry: pointer): void {.importc: "QLayoutItem_setGeometry".}
proc fcQLayoutItem_geometry(self: pointer, ): pointer {.importc: "QLayoutItem_geometry".}
proc fcQLayoutItem_isEmpty(self: pointer, ): bool {.importc: "QLayoutItem_isEmpty".}
proc fcQLayoutItem_hasHeightForWidth(self: pointer, ): bool {.importc: "QLayoutItem_hasHeightForWidth".}
proc fcQLayoutItem_heightForWidth(self: pointer, param1: cint): cint {.importc: "QLayoutItem_heightForWidth".}
proc fcQLayoutItem_minimumHeightForWidth(self: pointer, param1: cint): cint {.importc: "QLayoutItem_minimumHeightForWidth".}
proc fcQLayoutItem_invalidate(self: pointer, ): void {.importc: "QLayoutItem_invalidate".}
proc fcQLayoutItem_widget(self: pointer, ): pointer {.importc: "QLayoutItem_widget".}
proc fcQLayoutItem_layout(self: pointer, ): pointer {.importc: "QLayoutItem_layout".}
proc fcQLayoutItem_spacerItem(self: pointer, ): pointer {.importc: "QLayoutItem_spacerItem".}
proc fcQLayoutItem_alignment(self: pointer, ): cint {.importc: "QLayoutItem_alignment".}
proc fcQLayoutItem_setAlignment(self: pointer, a: cint): void {.importc: "QLayoutItem_setAlignment".}
proc fcQLayoutItem_controlTypes(self: pointer, ): cint {.importc: "QLayoutItem_controlTypes".}
proc fcQLayoutItem_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QLayoutItem_override_virtual_sizeHint".}
proc fcQLayoutItem_override_virtual_minimumSize(self: pointer, slot: int) {.importc: "QLayoutItem_override_virtual_minimumSize".}
proc fcQLayoutItem_override_virtual_maximumSize(self: pointer, slot: int) {.importc: "QLayoutItem_override_virtual_maximumSize".}
proc fcQLayoutItem_override_virtual_expandingDirections(self: pointer, slot: int) {.importc: "QLayoutItem_override_virtual_expandingDirections".}
proc fcQLayoutItem_override_virtual_setGeometry(self: pointer, slot: int) {.importc: "QLayoutItem_override_virtual_setGeometry".}
proc fcQLayoutItem_override_virtual_geometry(self: pointer, slot: int) {.importc: "QLayoutItem_override_virtual_geometry".}
proc fcQLayoutItem_override_virtual_isEmpty(self: pointer, slot: int) {.importc: "QLayoutItem_override_virtual_isEmpty".}
proc fQLayoutItem_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QLayoutItem_virtualbase_hasHeightForWidth".}
proc fcQLayoutItem_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QLayoutItem_override_virtual_hasHeightForWidth".}
proc fQLayoutItem_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QLayoutItem_virtualbase_heightForWidth".}
proc fcQLayoutItem_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QLayoutItem_override_virtual_heightForWidth".}
proc fQLayoutItem_virtualbase_minimumHeightForWidth(self: pointer, param1: cint): cint{.importc: "QLayoutItem_virtualbase_minimumHeightForWidth".}
proc fcQLayoutItem_override_virtual_minimumHeightForWidth(self: pointer, slot: int) {.importc: "QLayoutItem_override_virtual_minimumHeightForWidth".}
proc fQLayoutItem_virtualbase_invalidate(self: pointer, ): void{.importc: "QLayoutItem_virtualbase_invalidate".}
proc fcQLayoutItem_override_virtual_invalidate(self: pointer, slot: int) {.importc: "QLayoutItem_override_virtual_invalidate".}
proc fQLayoutItem_virtualbase_widget(self: pointer, ): pointer{.importc: "QLayoutItem_virtualbase_widget".}
proc fcQLayoutItem_override_virtual_widget(self: pointer, slot: int) {.importc: "QLayoutItem_override_virtual_widget".}
proc fQLayoutItem_virtualbase_layout(self: pointer, ): pointer{.importc: "QLayoutItem_virtualbase_layout".}
proc fcQLayoutItem_override_virtual_layout(self: pointer, slot: int) {.importc: "QLayoutItem_override_virtual_layout".}
proc fQLayoutItem_virtualbase_spacerItem(self: pointer, ): pointer{.importc: "QLayoutItem_virtualbase_spacerItem".}
proc fcQLayoutItem_override_virtual_spacerItem(self: pointer, slot: int) {.importc: "QLayoutItem_override_virtual_spacerItem".}
proc fQLayoutItem_virtualbase_controlTypes(self: pointer, ): cint{.importc: "QLayoutItem_virtualbase_controlTypes".}
proc fcQLayoutItem_override_virtual_controlTypes(self: pointer, slot: int) {.importc: "QLayoutItem_override_virtual_controlTypes".}
proc fcQLayoutItem_delete(self: pointer) {.importc: "QLayoutItem_delete".}
proc fcQSpacerItem_new(w: cint, h: cint): ptr cQSpacerItem {.importc: "QSpacerItem_new".}
proc fcQSpacerItem_new2(param1: pointer): ptr cQSpacerItem {.importc: "QSpacerItem_new2".}
proc fcQSpacerItem_new3(w: cint, h: cint, hData: cint): ptr cQSpacerItem {.importc: "QSpacerItem_new3".}
proc fcQSpacerItem_new4(w: cint, h: cint, hData: cint, vData: cint): ptr cQSpacerItem {.importc: "QSpacerItem_new4".}
proc fcQSpacerItem_changeSize(self: pointer, w: cint, h: cint): void {.importc: "QSpacerItem_changeSize".}
proc fcQSpacerItem_sizeHint(self: pointer, ): pointer {.importc: "QSpacerItem_sizeHint".}
proc fcQSpacerItem_minimumSize(self: pointer, ): pointer {.importc: "QSpacerItem_minimumSize".}
proc fcQSpacerItem_maximumSize(self: pointer, ): pointer {.importc: "QSpacerItem_maximumSize".}
proc fcQSpacerItem_expandingDirections(self: pointer, ): cint {.importc: "QSpacerItem_expandingDirections".}
proc fcQSpacerItem_isEmpty(self: pointer, ): bool {.importc: "QSpacerItem_isEmpty".}
proc fcQSpacerItem_setGeometry(self: pointer, geometry: pointer): void {.importc: "QSpacerItem_setGeometry".}
proc fcQSpacerItem_geometry(self: pointer, ): pointer {.importc: "QSpacerItem_geometry".}
proc fcQSpacerItem_spacerItem(self: pointer, ): pointer {.importc: "QSpacerItem_spacerItem".}
proc fcQSpacerItem_sizePolicy(self: pointer, ): pointer {.importc: "QSpacerItem_sizePolicy".}
proc fcQSpacerItem_changeSize3(self: pointer, w: cint, h: cint, hData: cint): void {.importc: "QSpacerItem_changeSize3".}
proc fcQSpacerItem_changeSize4(self: pointer, w: cint, h: cint, hData: cint, vData: cint): void {.importc: "QSpacerItem_changeSize4".}
proc fQSpacerItem_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QSpacerItem_virtualbase_sizeHint".}
proc fcQSpacerItem_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QSpacerItem_override_virtual_sizeHint".}
proc fQSpacerItem_virtualbase_minimumSize(self: pointer, ): pointer{.importc: "QSpacerItem_virtualbase_minimumSize".}
proc fcQSpacerItem_override_virtual_minimumSize(self: pointer, slot: int) {.importc: "QSpacerItem_override_virtual_minimumSize".}
proc fQSpacerItem_virtualbase_maximumSize(self: pointer, ): pointer{.importc: "QSpacerItem_virtualbase_maximumSize".}
proc fcQSpacerItem_override_virtual_maximumSize(self: pointer, slot: int) {.importc: "QSpacerItem_override_virtual_maximumSize".}
proc fQSpacerItem_virtualbase_expandingDirections(self: pointer, ): cint{.importc: "QSpacerItem_virtualbase_expandingDirections".}
proc fcQSpacerItem_override_virtual_expandingDirections(self: pointer, slot: int) {.importc: "QSpacerItem_override_virtual_expandingDirections".}
proc fQSpacerItem_virtualbase_isEmpty(self: pointer, ): bool{.importc: "QSpacerItem_virtualbase_isEmpty".}
proc fcQSpacerItem_override_virtual_isEmpty(self: pointer, slot: int) {.importc: "QSpacerItem_override_virtual_isEmpty".}
proc fQSpacerItem_virtualbase_setGeometry(self: pointer, geometry: pointer): void{.importc: "QSpacerItem_virtualbase_setGeometry".}
proc fcQSpacerItem_override_virtual_setGeometry(self: pointer, slot: int) {.importc: "QSpacerItem_override_virtual_setGeometry".}
proc fQSpacerItem_virtualbase_geometry(self: pointer, ): pointer{.importc: "QSpacerItem_virtualbase_geometry".}
proc fcQSpacerItem_override_virtual_geometry(self: pointer, slot: int) {.importc: "QSpacerItem_override_virtual_geometry".}
proc fQSpacerItem_virtualbase_spacerItem(self: pointer, ): pointer{.importc: "QSpacerItem_virtualbase_spacerItem".}
proc fcQSpacerItem_override_virtual_spacerItem(self: pointer, slot: int) {.importc: "QSpacerItem_override_virtual_spacerItem".}
proc fQSpacerItem_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QSpacerItem_virtualbase_hasHeightForWidth".}
proc fcQSpacerItem_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QSpacerItem_override_virtual_hasHeightForWidth".}
proc fQSpacerItem_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QSpacerItem_virtualbase_heightForWidth".}
proc fcQSpacerItem_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QSpacerItem_override_virtual_heightForWidth".}
proc fQSpacerItem_virtualbase_minimumHeightForWidth(self: pointer, param1: cint): cint{.importc: "QSpacerItem_virtualbase_minimumHeightForWidth".}
proc fcQSpacerItem_override_virtual_minimumHeightForWidth(self: pointer, slot: int) {.importc: "QSpacerItem_override_virtual_minimumHeightForWidth".}
proc fQSpacerItem_virtualbase_invalidate(self: pointer, ): void{.importc: "QSpacerItem_virtualbase_invalidate".}
proc fcQSpacerItem_override_virtual_invalidate(self: pointer, slot: int) {.importc: "QSpacerItem_override_virtual_invalidate".}
proc fQSpacerItem_virtualbase_widget(self: pointer, ): pointer{.importc: "QSpacerItem_virtualbase_widget".}
proc fcQSpacerItem_override_virtual_widget(self: pointer, slot: int) {.importc: "QSpacerItem_override_virtual_widget".}
proc fQSpacerItem_virtualbase_layout(self: pointer, ): pointer{.importc: "QSpacerItem_virtualbase_layout".}
proc fcQSpacerItem_override_virtual_layout(self: pointer, slot: int) {.importc: "QSpacerItem_override_virtual_layout".}
proc fQSpacerItem_virtualbase_controlTypes(self: pointer, ): cint{.importc: "QSpacerItem_virtualbase_controlTypes".}
proc fcQSpacerItem_override_virtual_controlTypes(self: pointer, slot: int) {.importc: "QSpacerItem_override_virtual_controlTypes".}
proc fcQSpacerItem_delete(self: pointer) {.importc: "QSpacerItem_delete".}
proc fcQWidgetItem_new(w: pointer): ptr cQWidgetItem {.importc: "QWidgetItem_new".}
proc fcQWidgetItem_sizeHint(self: pointer, ): pointer {.importc: "QWidgetItem_sizeHint".}
proc fcQWidgetItem_minimumSize(self: pointer, ): pointer {.importc: "QWidgetItem_minimumSize".}
proc fcQWidgetItem_maximumSize(self: pointer, ): pointer {.importc: "QWidgetItem_maximumSize".}
proc fcQWidgetItem_expandingDirections(self: pointer, ): cint {.importc: "QWidgetItem_expandingDirections".}
proc fcQWidgetItem_isEmpty(self: pointer, ): bool {.importc: "QWidgetItem_isEmpty".}
proc fcQWidgetItem_setGeometry(self: pointer, geometry: pointer): void {.importc: "QWidgetItem_setGeometry".}
proc fcQWidgetItem_geometry(self: pointer, ): pointer {.importc: "QWidgetItem_geometry".}
proc fcQWidgetItem_widget(self: pointer, ): pointer {.importc: "QWidgetItem_widget".}
proc fcQWidgetItem_hasHeightForWidth(self: pointer, ): bool {.importc: "QWidgetItem_hasHeightForWidth".}
proc fcQWidgetItem_heightForWidth(self: pointer, param1: cint): cint {.importc: "QWidgetItem_heightForWidth".}
proc fcQWidgetItem_minimumHeightForWidth(self: pointer, param1: cint): cint {.importc: "QWidgetItem_minimumHeightForWidth".}
proc fcQWidgetItem_controlTypes(self: pointer, ): cint {.importc: "QWidgetItem_controlTypes".}
proc fQWidgetItem_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QWidgetItem_virtualbase_sizeHint".}
proc fcQWidgetItem_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QWidgetItem_override_virtual_sizeHint".}
